src/objects/Change_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Change_Set__c</fullName>
        <label>Change Set</label>
        <referenceTo>Change_Set__c</referenceTo>
        <relationshipLabel>Changes</relationshipLabel>
        <relationshipName>Change_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <label>Change</label>
        <referenceTo>Change__c</referenceTo>
        <relationshipLabel>Change Sets</relationshipLabel>
        <relationshipName>Change_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CodeChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CodeChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCodeChange__c</fullName>
        <formula>Case(  Change__r.Metadata__c , &quot;Class&quot;, &quot;True&quot;, &quot;Trigger&quot;, &quot;True&quot;, &quot;False&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCodeChange?</label>
        <type>Text</type>
    </fields>
    <label>Change Junction</label>
    <nameField>
        <displayFormat>MCJ-{00000}</displayFormat>
        <label>Change Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>